--- a/Challange_02/qr-code-component/styles.css
+++ b/Challange_02/qr-code-component/styles.css
@@ -29,8 +29,9 @@ body {
   font-family: "Outfit", sans-serif;
 }
 .attribution {
-  font-size: 11px;
+  font-size: 12px;
   text-align: center;
+  font-family: "Outfit", sans-serif;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
