--- a/Challenge_01/nft-preview-card-component/styles.css
+++ b/Challenge_01/nft-preview-card-component/styles.css
@@ -46,3 +46,11 @@ body {
   align-items: center;
   font-family: "Outfit", sans-serif;
 }
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
