--- a/Challenge_03/order-summary-component/styles.css
+++ b/Challenge_03/order-summary-component/styles.css
@@ -11,15 +11,17 @@ body {
   align-items: center;
   height: 100vh;
   background-image: url("./images/pattern-background.svg");
+  background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
-.attribution {
+.footer {
   font-size: 11px;
   text-align: center;
   font-family: "Red Hat Display", sans-serif;
 }
 
-.attribution a {
+.footer a {
   color: hsl(228, 45%, 44%);
 }
 .card {
