--- a/Challenge_08/style.css
+++ b/Challenge_08/style.css
@@ -9,7 +9,11 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    /* background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
+    background: url(/Frontend_Mentor/Challenge_08/img/background.jpg);
+    background-size: cover;
+    
+
 }
 
 .quiz_container{
@@ -19,7 +23,12 @@ body{
     border-radius: 15px;
     box-shadow: 0 0 5px rgba(0, 0 , 0, 0.3);
     overflow: hidden;
-    
+    cursor:url("/Frontend_Mentor/Challenge_08/img/pika.png"),auto;
+}
+h2{
+    margin: 0;
+    text-align: center;
+    padding: 1rem;
 }
 .quiz_header{
     padding: 2rem;
@@ -39,8 +48,11 @@ button{
     height: 50px;
     color: white;
     font-size: 1rem;
-    cursor: pointer;
-    
+    cursor:url("/Frontend_Mentor/Challenge_08/img/pika.png"),auto;
+}
+button:hover{
+    background-color: #40a3e6;
+    outline: none;
 }
 
 ul li{
@@ -48,5 +60,8 @@ ul li{
     margin: 1rem;
 }
 ul li label{
-cursor: pointer;
+    cursor:url("/Frontend_Mentor/Challenge_08/img/pika.png"),auto;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
