--- a/Challenge_08/style.css
+++ b/Challenge_08/style.css
@@ -10,7 +10,7 @@ body{
     align-items: center;
     height: 100vh;
     /* background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
-    background: url(/Frontend_Mentor/Challenge_08/img/background.jpg);
+    background: url(../Frontend_Mentor/Challenge_08/img/background.jpg);
     background-size: cover;
     
 
@@ -23,7 +23,7 @@ body{
     border-radius: 15px;
     box-shadow: 0 0 5px rgba(0, 0 , 0, 0.3);
     overflow: hidden;
-    cursor:url("/Frontend_Mentor/Challenge_08/img/pika.png"),auto;
+    cursor:url("../Frontend_Mentor/Challenge_08/img/pika.png"),auto;
 }
 h2{
     margin: 0;
@@ -48,7 +48,7 @@ button{
     height: 50px;
     color: white;
     font-size: 1rem;
-    cursor:url("/Frontend_Mentor/Challenge_08/img/pika.png"),auto;
+    cursor:url("../Frontend_Mentor/Challenge_08/img/pika.png"),auto;
 }
 button:hover{
     background-color: #40a3e6;
@@ -60,7 +60,7 @@ ul li{
     margin: 1rem;
 }
 ul li label{
-    cursor:url("/Frontend_Mentor/Challenge_08/img/pika.png"),auto;
+    cursor:url("../Frontend_Mentor/Challenge_08/img/pika.png"),auto;
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
